2007-01-10 TADA Tadashi <sho@spc.gr.jp>
	* src.rb: modified to use ERB::Util.h instead of CGI::escpaeHTML.
	* todo .rb: modified to use ERB::Util.h instead of CGI::escpaeHTML and escape base-html
	* tb-show.rbm pb-show.rb: rewind some over escapes.

2007-01-09 zunda <zunda at freeshell.org>
	* navi_user.rb: modified to work on secure mode

2007-01-10  Kazuhiko  <kazuhiko@fdiary.net>
	* pb-show.rb, recent_list.rb, title_list.rb: remove parentheses
	warnings.

2007-01-10 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: include ERB::Util to MakeRssFull class.

2007-01-09 zunda <zunda at freeshell.org>
	* disp_referrer.rb: extend ERB::Util to use h() on ruby-1.8.2

2007-01-09 SHIBATA Hiroshi <h-sbt@nifty.com>
	* apply HTML escape when generate HTML in some more plugins.

2007-01-09 zunda <zunda at freeshell.org>
	* disp_referrer.rb: do not try to use ERB::Util.h which will
	fail on ruby-1.8.2
	* */weather.rb: include ERB::Util in class Weather for ruby-1.8.2
	* */weather.rb: use u() instead of h() to encode URLs

2007-01-08 TADA Tadashi <sho@spc.gr.jp>
	* makelirs.rb: remove CR/LF char from LIRS items.
	* makerss.rb: escape HTML tags from feed XML.

2007-01-08 zunda <zunda at freeshell.org>
	* navi_user.rb: escaped arguments to navi_item

2007-01-07 zunda <zunda at freeshell.org>
	* highlgiht.rb: modififed to escape diary_title in Ruby and
	unescape it in Javascript

2007-01-07 zunda <zunda at freeshell.org>
	* search_control.rb: modified to use h instead of
	CGI::escpaeHTML and escape base-html

2007-01-07 zunda <zunda at freeshell.org>
	* disp_referrer.rb: fixed typo in to_short_html

2007-01-07 zunda <zunda at freeshell.org>
	* my-ex.rb: modified to use ERB::Util.h instead of
	CGI::escpaeHTML and escape base-html

2007-01-07 zunda <zunda at freeshell.org>
	* disp_referrer.rb: try ERB::Util.h before trying CGI::escpaeHTML
	* disp_referrer.rb, */disp_referrer.rb: added HTML-escapes to
	@conf.update, urls, and other strings

2007-01-07 zunda <zunda at freeshell.org>