@@ -1,4 +1,4 @@
-# a.rb $Revision: 1.11 $
+# a.rb $Revision: 1.12 $
 #
 # Create anchor easily.
 #
@@ -48,7 +48,6 @@ A_REG_COLON = /\:/
 A_REG_URL = /:\/\//
 A_REG_CHARSET = /euc|sjis|jis/
 A_REG_CHARSET2 = /sjis|jis/
-A_REG_CHARSET3 = /euc/
 A_REG_MY = /^\d{8}/
 
 if @options and @options["a.path"] 
@@ -94,9 +93,7 @@ def a_convert_charset(option, charset)
 	return "" unless option
 	return option unless charset
 	if charset =~ A_REG_CHARSET2
-		ret = CGI.escape(NKF::nkf("-#{charset[0].chr}", option))
-	elsif charset =~ A_REG_CHARSET3
-		ret = CGI.escape(option)
+		ret = NKF::nkf("-#{charset[0].chr}", option)
 	else
 		ret = option
 	end
@@ -127,14 +124,14 @@ def a(key, option_or_name = nil, name = nil, charset = nil)
 		url = key
 		if name
 			value = name
-			url += a_convert_charset(option_or_name, charset)
+			url += u(a_convert_charset(option_or_name, charset))
 		elsif option_or_name
 			value = option_or_name 
 		else
 			value = key
 		end
 	else
-		url += a_convert_charset(option_or_name, charset)
+		url += u(a_convert_charset(option_or_name, charset))
 		value = name if name
 	end
 
@@ -151,7 +148,7 @@ def a(key, option_or_name = nil, name = nil, charset = nil)
 			result = "tlink is not available."
 		end
 	else
-		result = %Q[<a href="#{CGI.escapeHTML(url)}">#{value}</a>]
+		result = %Q[<a href="#{h url}">#{value}</a>]
 	end
 	result
 end
@@ -163,7 +160,7 @@ end
 def a_conf_html(data)
 %Q[
 #{a_conf_explain}
-<p><textarea name="anchor_plugin_data" cols="#{a_conf_cols}" rows="#{a_conf_rows}">#{data}</textarea></p>
+<p><textarea name="anchor_plugin_data" cols="#{a_conf_cols}" rows="#{a_conf_rows}">#{h data}</textarea></p>
 ]
 end
 
