@@ -1,3 +1,8 @@
+2007-01-10 zunda <zunda at freeshell.org>
+	* a.rb: modified to URL-escape syntheized part of URL independent of
+	charset, use h() insted of CGI.escapeHTML(), and HTML-escape data
+	inside textarea
+
 2007-01-10 TADA Tadashi <sho@spc.gr.jp>
 	* src.rb: modified to use ERB::Util.h instead of CGI::escpaeHTML.
 	* todo .rb: modified to use ERB::Util.h instead of CGI::escpaeHTML and escape base-html
